feat: `getCarNameListFromCarNames` 메서드 구현